fix overflow

--- a/style-0.css
+++ b/style-0.css
@@ -8,8 +8,8 @@ body {
 .content {
   position: relative;
   padding-top: 8%;
-  min-height: 100vh;
-  min-width:100vw;
+  max-height: 100vh;
+  max-width:100vw;
   color: #ffffff;
   text-align: center;
 }
